Several steps forward in a workflow elaboration

--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -52,11 +52,34 @@ but emotion or intuition.
 
 ** Biology
 
+We are the living organisms, thus the lion's share of our nature is
+predefined by the large set of natural laws. The first and foremost
+for any living creature are:
+
+- Safety, as a premise for survival;
+- Reproduction, as a cornerstone of life itself;
+
+Evolutionally the pledge of success in resolving these tough tasks was
+our /ability to unite in groups and cooperate with one another/. The
+modern science names it /socialising/. And this pecularity yields
+another sub-set of human-only demands:
+
+- Ability to share our resources amongst members of our group;
+- Abilyto to learn one from another;
+- Engagement into the fight for the dominance in our group;
+
+  
 *** Hunger
 
 **** Instant reward
 
+Is a basement for all types of /right/ actions. In opposite, - /wrong/
+actions don't give instant reward.
+
 **** Delayed reward
+
+~Human-only~ faculty to imagine a profitable consequence of /seemingly
+wrong recent/ actions.
 
 *** Circadian rhythms
 
