--- a/2024-06-05-python-fundamentals.org
+++ b/2024-06-05-python-fundamentals.org
@@ -36,6 +36,9 @@ tags: [True, False, None]
       def test_does_false_ever_exist(self):
           self.assertFalse(False)
 
+      # Now it is clear that True and False exist
+      # and they are touchable
+
       def test_does_none_ever_exist(self):
           self.assertIsNone(None)
           self.assertFalse(None)  # None is showed up!
@@ -46,36 +49,12 @@ tags: [True, False, None]
           self.assertIsNotNone(False)  # any Boolean value, it is unique
           self.assertFalse(None)  # But the vanilla None is False!
 
+#+end_src
 
-  """
-
-  Now it is very moment to dismantle the content of ~unittest~
-  toolbox. A dozen of acute utensils are there and you need to know which do
-  what. Bear in mind that you're already familiar with ~assertFalse~,
-  ~assertTrue~, ~assertIsNotNone~ and ~assertIsNone as well.
-
-  """
-
-
-  class TestAddtionalAssertionMethods(unittest.TestCase):
-
-      def test_are_they_the_same(self):
-          self.assertIs(True, True)
-          self.assertIs(False, False)
-          self.assertIs(None, None)
-
-      def test_are_they_not_the_same(self):
-          self.assertIsNot(True, False)
-          self.assertIsNot(True, None)
-          self.assertIsNot(None, False)
 #+begin_src python :exports results
 unittest.main(exit=False)
 #+end_src
 
-      def test_are_they_equal(self):
-          self.assertEqual(True, True)
-          self.assertEqual(False, False)
-          self.assertEqual(None, None)
 #+RESULTS:
 : ............
 : ----------------------------------------------------------------------
@@ -83,40 +62,38 @@ unittest.main(exit=False)
 : 
 : OK
 
-      def test_are_they_not_equal(self):
-          self.assertNotEqual(True, False)
-          self.assertNotEqual(True, None)
-          self.assertNotEqual(None, False)
 
-#+end_src
 
 * Comparisons
 
 #+begin_src python :tangle tests/test_cornerstones.py :comments link
+
+
   class TestTheLiteralTruths(unittest.TestCase):
 
       def test_any_non_zero_is_true(self):
-          self.assertTrue(1)
-          self.assertTrue(-1)
-          self.assertTrue("L")
-          self.assertFalse(None)  # Except the None!
+	  self.assertTrue(1)
+	  self.assertTrue(-1)
+	  self.assertTrue("L")
+	  self.assertFalse(None)  # Except the None!
 
       def test_zero_and_none_are_same_as_false(self):
-          self.assertFalse(0)
-          self.assertFalse(None)  # and None as well!
+	  self.assertFalse(0)
+	  self.assertFalse(None)  # and None as well!
 
 
   class TestPrimalsQuirks(unittest.TestCase):
 
       def test_true_equals_one(self):
-          self.assertTrue(True == 1)  # it is equal
-          self.assertFalse(True == -1)
-          self.assertFalse(True == 2)  # it isn't equal two!
-          self.assertFalse(True == 0)  # True is not zero
+	  self.assertTrue(True == 1)  # it is equal
+	  self.assertFalse(True == -1)
+	  self.assertFalse(True == 2)  # it isn't equal two!
+	  self.assertFalse(True == 0)  # True is not zero
 
       def test_any_non_zero_value_is_true(self):
-          self.assertTrue("A")
-          self.assertTrue(32)
+	  self.assertTrue("A")
+	  self.assertTrue(32)
+#+end_src
 
 #+begin_src python :exports results
 unittest.main(exit=False)
