--- a/2017-06-22-docker-intro.org
+++ b/2017-06-22-docker-intro.org
@@ -152,6 +152,8 @@ Follow the [[https://docs.docker.com/engine/install/linux-postinstall/][official
    #+END_SRC
 
    #+RESULTS:
+   : REPOSITORY    TAG       IMAGE ID       CREATED         SIZE
+   : hello-world   latest    d2c94e258dcb   13 months ago   13.3kB
 
 ** Test execution
 
